Removed TicketsRepository, Added TicketsFinder/Modifier

--- a/SupportApp/Views/Tickets/Completed.cshtml
+++ b/SupportApp/Views/Tickets/Completed.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SupportApp.Models.Ticket>
+﻿@model IEnumerable<SupportApp.Models.Tickets.Ticket>
 
 @{
     ViewData["Title"] = "Completed";
