--- a/SupportApp/Views/Tickets/Index.cshtml
+++ b/SupportApp/Views/Tickets/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SupportApp.Models.Tickets.Ticket>
+﻿@model IEnumerable<SupportApp.ViewModels.Tickets.TicketListViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -18,18 +18,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Author)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedAt)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Deadline)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -43,31 +31,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Author)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedAt)
-            </td>
-            @if (item.Deadline <= DateTime.Today.AddHours(-2))
-            {
-                <th style="background-color:red;">
-                    @Html.DisplayFor(modelItem => item.Deadline)
-                </th>
-            }
-            else
-            {
-                <th style="background-color:green;">
-                    @Html.DisplayFor(modelItem => item.Deadline)
-                </th>
-            }
         <td>
             <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
             <a asp-action="Details" asp-route-id="@item.Id">Details</a>
             <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <a asp-action="MarkDone" asp-route-id="@item.Id">Mark as done</a>
         </td>
         </tr>
         }
