Changed status to Completed

--- a/SupportApp/Views/Shared/_Layout.cshtml
+++ b/SupportApp/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tickets" asp-action="Index">Tickets</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Tickets" asp-action="Completed">Completed Tickets</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tickets" asp-action="Completed">Solved Tickets</a>
                         </li>
                     </ul>
                 </div>
