--- a/SupportApp/Views/Tickets/Create.cshtml
+++ b/SupportApp/Views/Tickets/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SupportApp.Models.Tickets.Ticket
+﻿@model SupportApp.ViewModels.Tickets.CreateTicketModel
 
 @{
     ViewData["Title"] = "Create";
