--- a/SupportApp/Views/Home/Index.cshtml
+++ b/SupportApp/Views/Home/Index.cshtml
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 
-<div class="text-center">
+<div class="text-center mt-5">
     <h1 class="display-4">Support</h1>
-    <div class="container">
+    <div class="container mt-5">
         <div class="row">
             <div class="col-sm">
                 <a type="button" class="btn btn-warning" asp-area="" asp-controller="Tickets" asp-action="Index">Unsolved Tickets</a>
