--- a/SupportApp/Views/Tickets/Details.cshtml
+++ b/SupportApp/Views/Tickets/Details.cshtml
@@ -35,10 +35,10 @@
             @Html.DisplayFor(model => model.CompletedAt)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
+            @Html.DisplayNameFor(model => model.IsCompleted)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Status)
+            @Html.DisplayFor(model => model.IsCompleted)
         </dd>
     </dl>
 </div>
