--- a/SupportApp/Views/Tickets/Index.cshtml
+++ b/SupportApp/Views/Tickets/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Unsolved Tickets</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-success">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -35,7 +35,6 @@
             <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
             <a asp-action="Details" asp-route-id="@item.Id">Details</a>
             <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            <a asp-action="MarkDone" asp-route-id="@item.Id">Mark as done</a>
         </td>
         </tr>
         }
