--- a/SupportApp/Views/Shared/_Layout.cshtml
+++ b/SupportApp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         </li>
                     </ul>
                 </div>
+                <div class="col-md-2 titlecol">
+                    <partial name="_LoginPartial.cshtml"></partial>
+                </div>
             </div>
         </nav>
     </header>
