--- a/SupportApp/Views/Shared/_Layout.cshtml
+++ b/SupportApp/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tickets" asp-action="Completed">Solved Tickets</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Categories</a>
+                            </li>
                     </ul>
                 </div>
             </div>
