--- a/SupportApp/Views/Tickets/Completed.cshtml
+++ b/SupportApp/Views/Tickets/Completed.cshtml
@@ -15,6 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Category)
+                        </th>
             <th></th>
         </tr>
     </thead>
@@ -28,6 +31,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Category)
+                        </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a>
