--- a/SupportApp/Views/Tickets/Details.cshtml
+++ b/SupportApp/Views/Tickets/Details.cshtml
@@ -40,6 +40,18 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IsCompleted)
         </dd>
+        <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Category)
+                </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Category)
+        </dd>
+                <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.Author)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.Author)
+                        </dd>
     </dl>
 </div>
 <div>
