--- a/SupportApp/Views/Tickets/Edit.cshtml
+++ b/SupportApp/Views/Tickets/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model SupportApp.ViewModels.Tickets.TicketEditViewModel
+﻿@using SupportApp.Migrations
+@model SupportApp.ViewModels.Tickets.TicketEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -11,25 +12,33 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
+            @for(var i = 0; i < Model.Categories.Length; i++)
+            {
+                @Html.HiddenFor(model => Model.Categories[i])
+            }
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Id"/>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <input asp-for="Title" class="form-control"/>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <input asp-for="Description" class="form-control"/>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IsCompleted" class="control-label"></label>
-                <input asp-for="IsCompleted" class="form-control" />
+                <input asp-for="IsCompleted" class="form-control"/>
                 <span asp-validation-for="IsCompleted" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <select asp-for="CategoryId" asp-items="@Model.Categories"></select>
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary"/>
             </div>
         </form>
     </div>
@@ -39,6 +48,4 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+
