--- a/SupportApp/Views/Tickets/Index.cshtml
+++ b/SupportApp/Views/Tickets/Index.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Category)
+                        </th>
             <th></th>
         </tr>
     </thead>
@@ -31,10 +34,13 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Category)
+                        </td>
         <td>
-            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-            <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <a asp-action="Edit" asp-route-id="@item.Id" class="badge badge-warning">Edit</a>
+            <a asp-action="Details" asp-route-id="@item.Id" class="badge badge-primary">Details</a>
+            <a asp-action="Delete" asp-route-id="@item.Id" class="badge badge-danger">Delete</a>
         </td>
         </tr>
         }
