--- a/SupportApp/Views/Tickets/Edit.cshtml
+++ b/SupportApp/Views/Tickets/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿@using SupportApp.Migrations
-@model SupportApp.ViewModels.Tickets.TicketEditViewModel
+﻿@model SupportApp.ViewModels.Tickets.TicketEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
