--- a/SupportApp/Views/Comment/Delete.cshtml
+++ b/SupportApp/Views/Comment/Delete.cshtml
@@ -1,8 +1,19 @@
 @model SupportApp.Models.Comments.Comment
-
 @{
-    ViewBag.Title = "title";
-    Layout = "_Layout";
+    ViewData["Title"] = "Delete";
 }
+<center>
+    <h1>Delete</h1>
 
-<h2>title</h2>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Comment:@Model.Content || id: @Model.Id</h4>
+        <br>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            <a onclick= "history.go(-1)" class="btn btn-danger">Back</a>
+        </form>
+    </div>
+</center>
