--- a/SupportApp/Views/Tickets/Create.cshtml
+++ b/SupportApp/Views/Tickets/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using SupportApp.Models.Categories
-@using SupportApp.Migrations
+﻿@using SupportApp.Areas.Identity.Data
 @model SupportApp.ViewModels.Tickets.CreateTicketModel
 
 @{
@@ -25,9 +24,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Author" class="control-label"></label>
-                <input asp-for="Author" class="form-control" />
-                <span asp-validation-for="Author" class="text-danger"></span>
+                <input hidden name="Author" value="@User.Identity.Name">
             </div>
             <select asp-for="Category" asp-items="@Model.Categories"></select>
             <span asp-validation-for="Category" class="text-danger"></span>
