Added tests. Minor fixes

--- a/SupportApp/Views/Home/Index.cshtml
+++ b/SupportApp/Views/Home/Index.cshtml
@@ -13,8 +13,9 @@
 </head>
 
 <div class="text-center mt-5">
-    <h1 class="display-4">Support</h1>
-    <div class="container mt-5">
+    <h1 class="display-4">Support App</h1>
+    <h3 class="pt-5">Welcome @User.Identity.Name! </h3>
+    <div class="container mt-5 pt-5">
         <div class="row">
             <div class="col-sm">
                 <a type="button" class="btn btn-warning" asp-area="" asp-controller="Tickets" asp-action="Index">Unsolved Tickets</a>
