--- a/SupportApp/Views/Tickets/Create.cshtml
+++ b/SupportApp/Views/Tickets/Create.cshtml
@@ -5,9 +5,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create a new ticket</h1>
 
-<h4>Ticket</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,18 +22,15 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input hidden name="Author" value="@User.Identity.Name">
-            </div>
             <select asp-for="Category" asp-items="@Model.Categories"></select>
             <span asp-validation-for="Category" class="text-danger"></span>
-            <div class="form-group">
+            <div class="form-group pt-5">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
+<hr>
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
