--- a/SupportApp/Views/Tickets/Index.cshtml
+++ b/SupportApp/Views/Tickets/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Security.Cryptography
+@using SupportApp.Models.Tickets
 @model IEnumerable<SupportApp.ViewModels.Tickets.TicketListViewModel>
 
 @{
@@ -23,18 +24,18 @@
 </form>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Category)
-                        </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Id)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Title)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Category)
+        </th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
     
@@ -54,12 +55,12 @@
                 <a asp-action="Edit" asp-route-id="@item.Id" class="badge badge-success">Edit</a>
                 <a asp-action="Details" asp-route-id="@item.Id" class="badge badge-primary">Details</a>
                 <a asp-action="Delete" asp-route-id="@item.Id" class="badge badge-danger">Delete</a>
-                        @if(item.Deadline <= DateTime.Now )
-                        {
-                            <p class="badge badge-warning">Overdue!</p>
-                        }
             </td>
         </tr>
     }
     </tbody>
 </table>
+@if (User.IsInRole("Admin"))
+{
+    @Html.ActionLink("View over due tickets", "OverdueTickets", "Tickets")
+}
