--- a/SupportApp/Views/Tickets/Details.cshtml
+++ b/SupportApp/Views/Tickets/Details.cshtml
@@ -12,6 +12,7 @@
 <div>
     <h4>Ticket</h4>
     <hr/>
+
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
@@ -44,41 +45,76 @@
             @Html.DisplayFor(model => model.IsCompleted)
         </dd>
         <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.Category)
-                </dt>
+            @Html.DisplayNameFor(model => model.Category)
+        </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Category)
         </dd>
-                <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Author)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Author)
-                        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Author)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Author)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Images)
+        </dt>
+        <dd class="col-sm-10">
+            <a class="badge badge-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Click to see
+            </a>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    @foreach (var image in Model.Images)
+                    {
+                        <a href="data:image/png;base64, @image.DataBase64">
+                            <img src="data:image/png;base64, @image.DataBase64" style="max-height: 100px; max-width: 80px; display: inline;"/>
+                        </a>
+                    }
+                </div>
+            </div>
+        </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
 <hr>
+<div class="alert-danger">
+    @Html.ValidationSummary()
+</div>
+<form enctype="multipart/form-data" method="post" asp-controller="Tickets" asp-action="UploadImage">
+    <input hidden name="id" value="@Model.Id"/>
+    <dl>
+        <dt>
+            <label asp-for="Images"></label>
+        </dt>
+        <dd>
+            <input asp-for="Images" type="file" name="files" multiple>
+        </dd>
+    </dl>
+    <input class="btn btn-primary" type="submit">
+</form>
+<hr>
 @using (Html.BeginForm("Create", "Comment", FormMethod.Post, null))
-    {
-                    <div class="form-group">
-                        <label class="control-label">Add a comment</label>
-                        <input hidden name="TicketId" value="@Model.Id">
-                        <input name="Content" class="form-control" />
-                        <span asp-validation-for="Content" class="text-danger"></span>
-                    </div>
-        <div class="form-group">
-            <input type="submit" value="Create" class="btn btn-primary" />
-        </div>
-    }
+{
+    <div class="form-group">
+        <label class="control-label">Add a comment</label>
+        <input hidden name="TicketId" value="@Model.Id">
+        <input name="Content" class="form-control"/>
+        <span asp-validation-for="Content" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Create" class="btn btn-primary"/>
+    </div>
+}
 
-@foreach(var comment in Model.Comments){
+@foreach (var comment in Model.Comments)
+{
     <tr>
-    <dd class="col-sm-10">
-        @comment.Content
-        @Html.ActionLink("delete","Delete","Comment",new {Id = comment.Id})
-    </dd>
+        <dd class="col-sm-10">
+            @comment.Content
+            @Html.ActionLink("delete", "Delete", "Comment", new {Id = comment.Id})
+        </dd>
     </tr>
 }
